优化dockerfile镜像无法获取最新数据